--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,7 @@ asset.es.conn.timeout=60000
 asset.es.socket.timeout=60000
 
 asset.default.index=six_anagraphic_asset
+quarkus.class-loading.parent-first-artifacts=org.glassfish:jakarta.json
 quarkus.native.additional-build-args=--initialize-at-run-time=org.apache.http.impl
+
+quarkus.native.auto-service-loader-registration=true
