--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ asset.es.conn.timeout=60000
 asset.es.socket.timeout=60000
 
 asset.default.index=six_anagraphic_asset
-quarkus.class-loading.parent-first-artifacts=org.glassfish:jakarta.json
-quarkus.native.additional-build-args=--initialize-at-run-time=org.apache.http.impl
+
+quarkus.native.additional-build-args=--initialize-at-run-time=org.apache.http.impl.auth.NTLMEngineImpl,--initialize-at-build-time=org.apache.http.impl.client.BasicAuthCache,-H:ResourceConfigurationFiles=resources-config.json,-H:ReflectionConfigurationFiles=reflection-config.json
 
 quarkus.native.auto-service-loader-registration=true
