native commit OK

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
         <quarkus.platform.version>2.14.0.Final</quarkus.platform.version>
         <elasticsearch-java.version>8.5.0</elasticsearch-java.version>
+        <apache-commons.version>3.12.0</apache-commons.version>
+        <camel-quarkus-support-httpclient.version>2.14.0</camel-quarkus-support-httpclient.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
         <shade-plugin.version>3.0.0</shade-plugin.version>
@@ -35,11 +37,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>4.5.13</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
@@ -59,10 +56,22 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-opentelemetry</artifactId>
         </dependency>
-        <!--<dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-opentelemetry</artifactId>
-        </dependency>-->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-arc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-arc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-elasticsearch-rest-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>commons-logging-jboss-logging</artifactId>
+        </dependency>
         <dependency>
             <groupId>co.elastic.clients</groupId>
             <artifactId>elasticsearch-java</artifactId>
@@ -81,21 +90,20 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>${apache-commons.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.jboss.logging</groupId>
-            <artifactId>commons-logging-jboss-logging</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-arc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.camel.quarkus</groupId>
-            <artifactId>camel-quarkus-support-httpclient</artifactId>
-            <version>2.9.0</version>
-        </dependency>
+
+        <!-- <dependency>
+           <groupId>org.apache.camel.quarkus</groupId>
+           <artifactId>camel-quarkus-support-httpclient</artifactId>
+           <version>${camel-quarkus-support-httpclient.version}</version>
+       </dependency>-->
+        <!--<dependency>
+           <groupId>org.apache.camel.quarkus</groupId>
+           <artifactId>camel-quarkus-opentelemetry</artifactId>
+       </dependency>-->
+
+        <!--TEST-->
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit5</artifactId>
