--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-quarkus.opentelemetry.enabled=true 
+
+#OPENTELEMETRY
+quarkus.opentelemetry.enabled=true
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
 quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my_secret
 quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
 
+#ELASTIC
 asset.es.address=asset-split-elastic.n-ess.it:443
 asset.es.user=elasticsearch
 asset.es.pwd=elasticsearch
@@ -10,8 +13,34 @@ asset.es.schema=https
 asset.es.conn.timeout=60000
 asset.es.socket.timeout=60000
 
+
+#asset.es.address=localhost:9208
+#asset.es.user=elasticsearch
+#asset.es.pwd=elasticsearch
+#asset.es.schema=http
+#asset.es.conn.timeout=60000
+#asset.es.socket.timeout=60000
+
+
+#asset.es.address=elastic-dev-cps.es.francecentral.azure.elastic-cloud.com:443
+#asset.es.user=elasticsearch
+#asset.es.pwd=3aixj1FLE1NNkgaBxZawfvHC
+#asset.es.schema=https
+#asset.es.conn.timeout=60000
+#asset.es.socket.timeout=60000
+
+#INDEX
 asset.default.index=six_anagraphic_asset
 
+#NATIVE
 quarkus.native.additional-build-args=--initialize-at-run-time=org.apache.http.impl.auth.NTLMEngineImpl
-
 quarkus.native.auto-service-loader-registration=true
+
+# DATASOURCE
+quarkus.datasource.devservices.enabled=false
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = postgres
+quarkus.datasource.password = postgres
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=asset
+
+
