config refresh OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ asset.es.schema=https
 asset.es.conn.timeout=60000
 asset.es.socket.timeout=60000
 
+quarkus.elasticsearch.devservices.enabled=false
+
 
 #asset.es.address=localhost:9208
 #asset.es.user=elasticsearch
@@ -42,5 +44,5 @@ quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = postgres
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=asset
-
+quarkus.hibernate-orm.validate-in-dev-mode=false
 
