config refresh native OK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,8 @@ quarkus.elasticsearch.devservices.enabled=false
 asset.default.index=six_anagraphic_asset
 
 #NATIVE
-quarkus.native.additional-build-args=--initialize-at-run-time=org.apache.http.impl.auth.NTLMEngineImpl
+quarkus.native.additional-build-args=--initialize-at-run-time=org.apache.http.impl.auth.NTLMEngineImpl,-H:ReflectionConfigurationFiles=reflection-config.json
+#quarkus.native.additional-build-args=--initialize-at-run-time=org.apache.http.impl.auth.NTLMEngineImpl
 quarkus.native.auto-service-loader-registration=true
 
 # DATASOURCE
