docker compose ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 #OPENTELEMETRY
 quarkus.opentelemetry.enabled=true
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
+#quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://host.docker.internal:4317
 quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my_secret
 quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
 
@@ -45,5 +46,6 @@ quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = postgres
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=asset
+#quarkus.datasource.jdbc.url = jdbc:postgresql://host.docker.internal:5432/postgres?currentSchema=asset
 quarkus.hibernate-orm.validate-in-dev-mode=false
 
