--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my_secre
 quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
 
 #ELASTIC
+quarkus.elasticsearch.devservices.enabled=false
 asset.es.address=asset-split-elastic.n-ess.it:443
 asset.es.user=elasticsearch
 asset.es.pwd=elasticsearch
@@ -14,8 +15,8 @@ asset.es.schema=https
 asset.es.conn.timeout=60000
 asset.es.socket.timeout=60000
 
-quarkus.elasticsearch.devservices.enabled=false
-
+#PORT
+quarkus.http.port=8888
 
 #asset.es.address=localhost:9208
 #asset.es.user=elasticsearch
@@ -48,4 +49,7 @@ quarkus.datasource.password = postgres
 quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=asset
 #quarkus.datasource.jdbc.url = jdbc:postgresql://host.docker.internal:5432/postgres?currentSchema=asset
 quarkus.hibernate-orm.validate-in-dev-mode=false
+
+emma.datasetclient.url=localhost
+emma.datasetclient.port=8080
 
