--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,26 @@ quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
 quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my_secret
 quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
 
+
+#KAFKA
+quarkus.kafka.devservices.enabled=false
+kafka.bootstrap.servers=localhost:29092
+mp.messaging.outgoing.event.connector=smallrye-kafka
+mp.messaging.outgoing.event.topic=demo
+mp.messaging.outgoing.event.value.serializer=it.ictgroup.model.util.CustomObjectSerializer
+
+mp.messaging.incoming.event-in.topic=demo
+mp.messaging.incoming.event-in.connector=smallrye-kafka
+mp.messaging.incoming.event-in.value.deserializer=it.ictgroup.model.util.CustomObjectDeserializer
+
+#mp.messaging.outgoing.event.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+#mp.messaging.outgoing.event.value.serializer=io.vertx.kafka.client.serialization.JsonObjectSerializer
+
+
+
+
+
+
 #ELASTIC
 quarkus.elasticsearch.devservices.enabled=false
 asset.es.address=asset-split-elastic.n-ess.it:443
@@ -15,7 +35,7 @@ asset.es.schema=https
 asset.es.conn.timeout=60000
 asset.es.socket.timeout=60000
 
-#PORT
+#SERVER PORT
 quarkus.http.port=8888
 
 #asset.es.address=localhost:9208
