incoming -> outgoing complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,22 +9,27 @@ quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{pa
 
 #KAFKA
 quarkus.kafka.devservices.enabled=false
-kafka.bootstrap.servers=localhost:29092
-mp.messaging.outgoing.event.connector=smallrye-kafka
-mp.messaging.outgoing.event.topic=demo
-mp.messaging.outgoing.event.value.serializer=it.ictgroup.model.util.CustomObjectSerializer
+#kafka.bootstrap.servers=localhost:29092
+kafka.bootstrap.servers=192.168.1.56:29092
 
-mp.messaging.incoming.event-in.topic=demo
+
+mp.messaging.outgoing.event-out.connector=smallrye-kafka
+mp.messaging.outgoing.event-out.topic=custom
+mp.messaging.outgoing.event-out.value.serializer=it.ictgroup.model.util.CustomObjectSerializer
+#mp.messaging.outgoing.event-out.value.serializer=io.vertx.kafka.client.serialization.JsonObjectSerializer
+
+#mp.messaging.outgoing.event-out.partition=1
+
+mp.messaging.incoming.event-in.topic=custom
 mp.messaging.incoming.event-in.connector=smallrye-kafka
 mp.messaging.incoming.event-in.value.deserializer=it.ictgroup.model.util.CustomObjectDeserializer
+#mp.messaging.incoming.event-in.value.serializer=io.vertx.kafka.client.serialization.JsonObjectDeserializer
+
+mp.messaging.incoming.event-in.group.id=quarkus-open-telemetry-intellij
+#mp.messaging.incoming.event-in.group.id=quarkus-open-telemetry-docker
 
 #mp.messaging.outgoing.event.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 #mp.messaging.outgoing.event.value.serializer=io.vertx.kafka.client.serialization.JsonObjectSerializer
-
-
-
-
-
 
 #ELASTIC
 quarkus.elasticsearch.devservices.enabled=false
@@ -35,16 +40,12 @@ asset.es.schema=https
 asset.es.conn.timeout=60000
 asset.es.socket.timeout=60000
 
-#SERVER PORT
-quarkus.http.port=8888
-
 #asset.es.address=localhost:9208
 #asset.es.user=elasticsearch
 #asset.es.pwd=elasticsearch
 #asset.es.schema=http
 #asset.es.conn.timeout=60000
 #asset.es.socket.timeout=60000
-
 
 #asset.es.address=elastic-dev-cps.es.francecentral.azure.elastic-cloud.com:443
 #asset.es.user=elasticsearch
@@ -70,6 +71,11 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres?currentS
 #quarkus.datasource.jdbc.url = jdbc:postgresql://host.docker.internal:5432/postgres?currentSchema=asset
 quarkus.hibernate-orm.validate-in-dev-mode=false
 
+
+#MATRIX
 emma.datasetclient.url=localhost
 emma.datasetclient.port=8080
+
+#SERVER PORT
+quarkus.http.port=8888
 
