incoming -> outgoing SERIALIZATION default

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,23 +13,25 @@ quarkus.kafka.devservices.enabled=false
 kafka.bootstrap.servers=192.168.1.56:29092
 
 
+quarkus.reactive-messaging.kafka.serializer-generation.enabled=true
+
+
 mp.messaging.outgoing.event-out.connector=smallrye-kafka
 mp.messaging.outgoing.event-out.topic=custom
-mp.messaging.outgoing.event-out.value.serializer=it.ictgroup.model.util.CustomObjectSerializer
-#mp.messaging.outgoing.event-out.value.serializer=io.vertx.kafka.client.serialization.JsonObjectSerializer
+#mp.messaging.outgoing.event-out.value.serializer=it.ictgroup.model.util.CustomObjectSerializer
+#mp.messaging.outgoing.event-out.value.serializer=io.quarkus.kafka.client.serialization.JsonObjectSerializer
 
 #mp.messaging.outgoing.event-out.partition=1
 
 mp.messaging.incoming.event-in.topic=custom
 mp.messaging.incoming.event-in.connector=smallrye-kafka
-mp.messaging.incoming.event-in.value.deserializer=it.ictgroup.model.util.CustomObjectDeserializer
-#mp.messaging.incoming.event-in.value.serializer=io.vertx.kafka.client.serialization.JsonObjectDeserializer
+#mp.messaging.incoming.event-in.value.deserializer=it.ictgroup.model.util.CustomObjectDeserializer
+#mp.messaging.incoming.event-in.value.serializer=io.quarkus.kafka.client.serialization.JsonObjectDeserializer
 
 mp.messaging.incoming.event-in.group.id=quarkus-open-telemetry-intellij
 #mp.messaging.incoming.event-in.group.id=quarkus-open-telemetry-docker
 
 #mp.messaging.outgoing.event.key.serializer=org.apache.kafka.common.serialization.StringSerializer
-#mp.messaging.outgoing.event.value.serializer=io.vertx.kafka.client.serialization.JsonObjectSerializer
 
 #ELASTIC
 quarkus.elasticsearch.devservices.enabled=false
