--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-#OPENTELEMETRY
+#OPENTELEMETRY/JAEGER
 quarkus.opentelemetry.enabled=true
 quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
 #quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://host.docker.internal:4317
@@ -8,30 +8,31 @@ quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{pa
 
 
 #KAFKA
-quarkus.kafka.devservices.enabled=false
+quarkus.kafka.devservices.enabled=true
 #kafka.bootstrap.servers=localhost:29092
-kafka.bootstrap.servers=192.168.1.56:29092
-
-
+#kafka.bootstrap.servers=192.168.1.56:29092
 quarkus.reactive-messaging.kafka.serializer-generation.enabled=true
+mp.messaging.incoming.event-in.group.id=quarkus-open-telemetry-intellij
 
-
+#KAFKA EVENT-OUT
 mp.messaging.outgoing.event-out.connector=smallrye-kafka
 mp.messaging.outgoing.event-out.topic=custom
+
 #mp.messaging.outgoing.event-out.value.serializer=it.ictgroup.model.util.CustomObjectSerializer
 #mp.messaging.outgoing.event-out.value.serializer=io.quarkus.kafka.client.serialization.JsonObjectSerializer
-
 #mp.messaging.outgoing.event-out.partition=1
 
+#KAFKA EVENT-IN
 mp.messaging.incoming.event-in.topic=custom
 mp.messaging.incoming.event-in.connector=smallrye-kafka
+
 #mp.messaging.incoming.event-in.value.deserializer=it.ictgroup.model.util.CustomObjectDeserializer
 #mp.messaging.incoming.event-in.value.serializer=io.quarkus.kafka.client.serialization.JsonObjectDeserializer
+#mp.messaging.outgoing.event.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
-mp.messaging.incoming.event-in.group.id=quarkus-open-telemetry-intellij
+# to test two consumers
 #mp.messaging.incoming.event-in.group.id=quarkus-open-telemetry-docker
 
-#mp.messaging.outgoing.event.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 
 #ELASTIC
 quarkus.elasticsearch.devservices.enabled=false
@@ -74,10 +75,18 @@ quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/postgres?currentS
 quarkus.hibernate-orm.validate-in-dev-mode=false
 
 
+# OIDC Configuration
+quarkus.oidc.auth-server-url=https://sso.n-ess.it/auth/realms/asset
+quarkus.oidc.client-id=asset-rs
+
+# LOGGER
+quarkus.log.level=INFO
+
 #MATRIX
 emma.datasetclient.url=localhost
 emma.datasetclient.port=8080
 
 #SERVER PORT
 quarkus.http.port=8888
+
 
