un sacco di test

--- a/pom.xml
+++ b/pom.xml
@@ -38,27 +38,14 @@
         </dependencies>
     </dependencyManagement>
     <dependencies>
-
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy</artifactId>
         </dependency>
-
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-resteasy-jackson</artifactId>
         </dependency>
-
-<!--      <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-resteasy-reactive</artifactId>
-        </dependency>-->
-        <!--
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
-        </dependency>-->
-
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-opentelemetry</artifactId>
@@ -110,8 +97,14 @@
 
        <dependency>
             <groupId>it.ictgroup</groupId>
-            <artifactId>qsixmatrixclient</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <artifactId>q-asset-matrix-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>it.ictgroup</groupId>
+            <artifactId>q-asset-matrix-client</artifactId>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
 
         <!-- KAFKA -->
@@ -123,10 +116,20 @@
 
         <!-- OIDC -->
 
-        <dependency>
+       <!-- <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
+        </dependency>-->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-keycloak-authorization</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-undertow</artifactId>
+        </dependency>
+
+
 
         <!--TEST-->
 
@@ -140,6 +143,31 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>${compiler-plugin.version}</version>
+            <type>maven-plugin</type>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>${surefire-plugin.version}</version>
+            <type>maven-plugin</type>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>${surefire-plugin.version}</version>
+            <type>maven-plugin</type>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
@@ -216,11 +244,22 @@
 
     <repositories>
         <repository>
+            <id>nexus.releases</id>
+            <url>https://nexus.e-g.gs/repository/releases/</url>
+        </repository>
+        <repository>
+            <id>nexus.snapshots</id>
+            <url>https://nexus.e-g.gs/repository/snapshots/</url>
+        </repository>
+    </repositories>
+
+    <!--<repositories>
+        <repository>
             <id>local.snapshots</id>
             <name>Local Snapshot Repository</name>
             <url>file:/home/luigigianlupi/Projects/q-six-matrix-client/repo</url>
         </repository>
-    </repositories>
+    </repositories>-->
 
 
 </project>
