--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,14 +78,15 @@ quarkus.hibernate-orm.validate-in-dev-mode=false
 # OIDC Configuration
 quarkus.oidc.auth-server-url=https://sso.n-ess.it/auth/realms/asset
 quarkus.oidc.client-id=asset-rs
-quarkus.oidc.credentials.secret=8228c8f8-0f9f-488a-a183-ea3254fde3ef
-org.eclipse.microprofile.rest.client.propagateHeaders=Authorization
+#quarkus.oidc.credentials.secret=8228c8f8-0f9f-488a-a183-ea3254fde3ef
+#org.eclipse.microprofile.rest.client.propagateHeaders=Authorization
 #resteasy.role.based.security=true
-quarkus.oidc.tls.verification=none
+#quarkus.oidc.tls.verification=none
+
 
 # Enable Policy Enforcement
-quarkus.keycloak.policy-enforcer.enable=true
-keycloak.policy-enforcer-config.enforcement-mode=enforcing
+#quarkus.keycloak.policy-enforcer.enable=true
+keycloak.policy-enforcer-config.enforcement-mode=PERMISSIVE
 
 # LOGGER
 quarkus.log.level=INFO
