--- a/pom.xml
+++ b/pom.xml
@@ -95,17 +95,17 @@
             <version>${apache-commons.version}</version>
         </dependency>
 
-       <dependency>
+        <dependency>
             <groupId>it.ictgroup</groupId>
             <artifactId>q-asset-matrix-client</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+<!--
         <dependency>
             <groupId>it.ictgroup</groupId>
-            <artifactId>q-asset-matrix-client</artifactId>
-            <version>1.1-SNAPSHOT</version>
-        </dependency>
+            <artifactId>q-asset-utils</artifactId>
+            <version>1.0.1</version>
+        </dependency>-->
 
         <!-- KAFKA -->
 
@@ -124,10 +124,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-keycloak-authorization</artifactId>
         </dependency>
-        <dependency>
+ <!--       <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-undertow</artifactId>
-        </dependency>
+        </dependency>-->
 
 
 
